--- a/Nmr_Automation_Java1/test-output/old/Default suite/methods-alphabetical.html
+++ b/Nmr_Automation_Java1/test-output/old/Default suite/methods-alphabetical.html
@@ -1,14 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7ef87a">  <td>21/10/13 06:25:53</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="JC_retestingwithdataprovider.f(java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:test_NG.JC_retestingwithdataprovider@37858383]">f</td> 
-  <td>main@1387210478</td>   <td></td> </tr>
-<tr bgcolor="7ef87a">  <td>21/10/13 06:25:53</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="JC_retestingwithdataprovider.f(java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:test_NG.JC_retestingwithdataprovider@37858383]">f</td> 
-  <td>main@1387210478</td>   <td></td> </tr>
-<tr bgcolor="7ef87a">  <td>21/10/13 06:25:53</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="JC_retestingwithdataprovider.f(java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:test_NG.JC_retestingwithdataprovider@37858383]">f</td> 
-  <td>main@1387210478</td>   <td></td> </tr>
-<tr bgcolor="7ef87a">  <td>21/10/13 06:25:53</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="JC_retestingwithdataprovider.f(java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:test_NG.JC_retestingwithdataprovider@37858383]">f</td> 
-  <td>main@1387210478</td>   <td></td> </tr>
-<tr bgcolor="7ef87a">  <td>21/10/13 06:25:53</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="JC_retestingwithdataprovider.f(java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:test_NG.JC_retestingwithdataprovider@37858383]">f</td> 
-  <td>main@1387210478</td>   <td></td> </tr>
+<tr bgcolor="7ef87a">  <td>21/11/05 06:47:07</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;StudentRegistrationForm.browserlaunch()[pri:0, instance:testNG.StudentRegistrationForm@62230c58]">&gt;&gt;browserlaunch</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1670546046</td>   <td></td> </tr>
+<tr bgcolor="7ef87a">  <td>21/11/05 06:47:21</td>   <td>13524</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="StudentRegistrationForm.f()[pri:0, instance:testNG.StudentRegistrationForm@62230c58]">f</td> 
+  <td>main@1670546046</td>   <td></td> </tr>
 </table>
